<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout_violation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Violation Name-->
            <TextView
                android:id="@+id/tv_violation_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/violation_spam"
                android:textSize="14sp"
                android:textColor="@color/text_primary" />

            <!-- Detail Text View-->
            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violation_detail"
                android:textSize="12sp"
                android:textColor="@color/link_color" />
        </LinearLayout>

        <!-- Description -->
        <TextView
            android:id="@+id/tv_violation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/violation_content"
            android:textSize="12sp"
            android:textColor="@color/text_tertiary"
            android:visibility="gone" />

    </LinearLayout>
</layout>
